[package]
name = "multicast-dns"
version = "0.1.0"
authors = ["Aleh Zasypkin <azasypkin@mozilla.com>"]

[dependencies]
libc = "0.2.0"
docopt = "0.6.78"
docopt_macros = "0.6.81"
rustc-serialize = "0.3"

[lib]
name = "multicastdnslib"
path = "src/lib.rs"

[[bin]]
name = "multicastdns"
path = "src/bin.rs"
